dark mode frown fixed

--- a/styles/search.css
+++ b/styles/search.css
@@ -96,6 +96,7 @@
     width: 50%;
     max-width: 500px;
     min-width: 100px;
+    filter: var(--invert_amount);
 }
 
 @media screen and (max-width: 700px) {
